--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -26,3 +26,8 @@
     transform: rotate(360deg);
   }
 }
+
+.App-childRoutes {
+  height: 100%;
+  background: linear-gradient(to bottom, rgba(0, 0, 255, 0.15), rgba(0, 0, 255, 0.05));
+}
